--- a/index.html
+++ b/index.html
@@ -107,25 +107,27 @@
         <div><img src="images/Edoardo.svg" loading="lazy" width="150" height="Auto" alt="" class="image-9">
           <div class="paragraph-2 nero"><span class="evidenziato1">eddy.ceriani@gmail.com</span></div>
           <div class="paragraph-2 nero"><span class="evidenziato1">Now based in Milano.</span></div>
-          <div class="paragraph-2 nero padding"><span class="evidenziato1">Freshly graduated: Master degree in Communication Design at Politecnico di Milano(110/110)</span></div>
+          <div class="paragraph-2 nero padding"><span class="evidenziato1">Visual and communication designer</span></div>
           <div class="paragraph-2 nero italic"><span class="evidenziato1">Work expreriences</span></div>
-          <div class="paragraph-2 nero padding"><span class="evidenziato1">February 2025: Teaching assistant in editorial design. Politecnico di Milano.<br>2024-ongoing: Fanzine art direction. VerySeri Lab<br>2022-25: Designer freelance.<br>Ca’Boschi winery website art direction.<br>Campo dei Fiori Gin brand identity and bottle label.<br>Milano University District brand identity.</span></div>
+          <div class="paragraph-2 nero padding"><span class="evidenziato1">2025-ongoing: Communication designer, Habits srl. Prodcut design studio <br> February 2025: Workshop teaching assistant in editorial design. Politecnico di Milano.<br>2024-2025: Fanzine art direction. VerySeri Lab<br>2023-25: Designer freelance.<br>Milano University District brand identity.<br>Ca’Boschi winery website art direction.<br>Campo dei Fiori Gin brand identity and bottle label.</span></div>
           <div class="paragraph-2 nero italic"><span class="evidenziato1">Exhibition</span></div>
           <div class="paragraph-2 nero padding"><span class="evidenziato1">2023: Belonging/Not belonging  Indie magazine for social change<br>Referto Magazine,  La Stecca 3 (Milano).<br>2022: DesignXDesigner, Politecnico Design Student Exibition,<br>SourData (bachelor thesis project), Milano Design Week Fuorisalone.</span></div>
           <div class="paragraph-2 nero italic"><span class="evidenziato1">Education</span></div>
           <div class="paragraph-2 nero padding"><span class="evidenziato1">2019-2025: Master degree (110/110) and Bachelor degree (110/110) in Comunication Design at Politecnico di Milano. <br>2024: Erasmus experience, Politecnico di Leiria, Portugal.<br>2019: Scientific high school degree at Liceo Scientifico “G.B. Grassi”.</span></div>
         </div>
-        <div class="paragraph-2 nero fine-colonna"><span class="evidenziato1">Last website update: April 2025</span></div>
+        <div class="paragraph-2 nero fine-colonna"><span class="evidenziato1">Last website update: December 2025</span></div>
       </div>
       <div class="div-block-11">
         <div>
-          <div class="paragraph-2 nero padding"><span class="evidenziato1">I&#x27;m a freshly graduated designer based in Milan  with a strong passion for branding and web design.  But above all, I&#x27;m in love with the editorial world, from the perfect choice of paper to the richness of its content.</span></div>
+          <div class="paragraph-2 nero padding"><span class="evidenziato1">Multidisciplinary designer with a focus on visual storytelling. I am looking for a stimulating environment where I can contribute to meaningful projects while learning from mentors.</span></div>
           <div class="paragraph-2 nero italic"><span class="evidenziato1">Languages</span></div>
-          <div class="paragraph-2 nero padding"><span class="evidenziato1">Italian mothertongue<br>English fluent (TOEIC level C1)<br>Portuguese intermidiate</span></div>
+          <div class="paragraph-2 nero padding"><span class="evidenziato1">Italian mothertongue<br>English fluent (TOEIC level C1)<br>Portuguese advanced</span></div>
           <div class="paragraph-2 nero italic"><span class="evidenziato1">Skils</span></div>
-          <div class="paragraph-2 nero padding"><span class="evidenziato1">Analog: Screen printing,  Analog photography and developing,  Woodworking, Ceramic techniques<br>Software design: Figma, Adobe CC  (Illustrator,Indesign...), Gliphs 3<br>Website developing: Wordpress, Elementor Pro, Webflow,  Coding (Html &amp; Css)<br>Software 3D: Blender</span></div>
+          <div class="paragraph-2 nero padding"><span class="evidenziato1">Ai tools: Weavy AI, Higgsfield , N ano B anana Pro, Kling o1...<br>Software: Indesign, Illustrator, Figma, Excel, PowerPoint, AfterEffects, Rive.app... <br>Website: VisualStudio ( Html, Css), Elementor Pro, Webflow <br>3D: Blender ( Modelling SubD, Cycles rendering...)</span></div>
           <div class="paragraph-2 nero italic"><span class="evidenziato1">Passions</span></div>
-          <div class="paragraph-2 nero"><span class="evidenziato1">Design: Editorial design, Indie  magazine, website design <br>Sports: Bouldering and  rock climbing, Skiing, Surfing <br>Music instruments: Guitar, Piano</span></div>
+          <div class="paragraph-2 nero padding"><span class="evidenziato1">DIY / Woodwoork <br>Rock climbing <br>Hand printing techniques <br>Playing music</span></div>
+          <div class="paragraph-2 nero italic"><span class="evidenziato1">Skills</span></div>
+          <div class="paragraph-2 nero padding"><span class="evidenziato1">Team collaboration, Project coordination, Openness to feedback, Continuous learning mindset</span></div>
         </div>
       </div>
     </div>
