--- a/bensai.html
+++ b/bensai.html
@@ -144,7 +144,7 @@
     <div class="div-block-6">
       <div data-w-id="c6bf2b94-fe5f-7df5-f8f9-f4ad3f9c7516" class="text-block-2">Personal info</div>
       <div data-w-id="c6bf2b94-fe5f-7df5-f8f9-f4ad3f9c7514" class="text-block-2">
-        <a href="index.html">Edoardo Ceriani</a>
+        <a href="index.html">Homepage</a>
         <link rel="prefetch" href="/">
       </div>
     </div>
