Sense of Presence
Add my final thesis project

--- a/immotamanet.html
+++ b/immotamanet.html
@@ -58,6 +58,13 @@
           <div class="text-block evideziato"><sup class="superscript">Brand identity</sup>/</div>
         </div>
       </a>
+      <a data-w-id="6833d7a2-7ead-75fe-953d-f13dc36e8daa" href="ProductionOfPresence.html" class="menulink w-inline-block">
+        <div class="div-block-5">
+          <div class="text-block evideziato">The sense of presence</div>
+          <div class="div-block-4"><img src="images/IMG_4681.jpeg" loading="lazy" sizes="(max-width: 1059px) 100vw, 1059px"  alt="" class="image-4"></div>
+          <div class="text-block evideziato"><sup class="superscript">Master thesis</sup>/</div>
+        </div>
+      </a>
       <a data-w-id="c9dfc590-dcf8-5c4c-b94a-46b067157e84" href="campo-dei-fiori-gin.html" class="menulink w-inline-block">
         <div class="div-block-5">
           <div class="text-block evideziato">Campo dei Fiori</div>
@@ -137,7 +144,7 @@
           <div class="paragraph-2 nero italic"><span class="evidenziato1">Languages</span></div>
           <div class="paragraph-2 nero padding"><span class="evidenziato1">Italian mothertongue<br>English fluent (TOEIC level C1)<br>Portuguese advanced</span></div>
           <div class="paragraph-2 nero italic"><span class="evidenziato1">Skils</span></div>
-          <div class="paragraph-2 nero padding"><span class="evidenziato1">Ai tools: Weavy AI, Higgsfield , N ano B anana Pro, Kling o1...<br>Software: Indesign, Illustrator, Figma, Excel, PowerPoint, AfterEffects, Rive.app... <br>Website: VisualStudio ( Html, Css), Elementor Pro, Webflow <br>3D: Blender ( Modelling SubD, Cycles rendering...)</span></div>
+          <div class="paragraph-2 nero padding"><span class="evidenziato1">Ai tools: Weavy AI, Higgsfield , Nano Banana Pro, Kling o1...<br>Software: Indesign, Illustrator, Figma, Excel, PowerPoint, AfterEffects, Rive.app... <br>Website: VisualStudio ( Html, Css), Elementor Pro, Webflow <br>3D: Blender ( Modelling SubD, Cycles rendering...)</span></div>
           <div class="paragraph-2 nero italic"><span class="evidenziato1">Passions</span></div>
           <div class="paragraph-2 nero padding"><span class="evidenziato1">DIY / Woodwoork <br>Rock climbing <br>Hand printing techniques <br>Playing music</span></div>
           <div class="paragraph-2 nero italic"><span class="evidenziato1">Skills</span></div>
