--- a/ProductionOfPresence.html
+++ b/ProductionOfPresence.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Thu Jul 17 2025 12:31:43 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="666c20bdb3b2b87c59ae0d70" data-wf-site="664b888832e5abdeceae9a72">
+<html data-wf-page="67f40ca95b308ce6542ff05f" data-wf-site="664b888832e5abdeceae9a72">
 <head>
   <meta charset="utf-8">
-  <title>SourData</title>
-  <meta content="This fictional brand lays its foundations in a highly topical speculation: if we had the tools to sell our most private data for money, would we be willing to do so? SourData answers this question by proposing a product/service system consisting of three devices capable of collecting data in extremely intimate areas such as masturbation, faeces and breath. All crowned by an ironic and irreverent brand identity characterised by pop imagery. The aim is to reflect on the disposal of personal data in the contemporary world." name="description">
-  <meta content="SourData" property="og:title">
-  <meta content="This fictional brand lays its foundations in a highly topical speculation: if we had the tools to sell our most private data for money, would we be willing to do so? SourData answers this question by proposing a product/service system consisting of three devices capable of collecting data in extremely intimate areas such as masturbation, faeces and breath. All crowned by an ironic and irreverent brand identity characterised by pop imagery. The aim is to reflect on the disposal of personal data in the contemporary world." property="og:description">
-  <meta content="SourData" property="twitter:title">
-  <meta content="This fictional brand lays its foundations in a highly topical speculation: if we had the tools to sell our most private data for money, would we be willing to do so? SourData answers this question by proposing a product/service system consisting of three devices capable of collecting data in extremely intimate areas such as masturbation, faeces and breath. All crowned by an ironic and irreverent brand identity characterised by pop imagery. The aim is to reflect on the disposal of personal data in the contemporary world." property="twitter:description">
+  <title>The sense of presence</title>
+  <meta content="Master thesis on the materiality of indie magazines" name="description">
+  <meta content="The sense of presence of indie magazines" property="og:title">
+  <meta content="Master thesis on the materiality of indie magazines" property="og:description">
+  <meta content="The sense of presence of indie magazines" property="twitter:title">
+  <meta content="Master thesis on the materiality of indie magazines" property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -29,19 +29,24 @@
     }
 </style>
 </head>
-<body class="body-2 sourdata">
+<body class="body-2">
   <section class="section-3">
     <div class="div-block-8">
-      <div class="text-block h1">SourData</div>
-      <div class="paragraph-2">This fictional brand lays its foundations in a highly topical speculation: if we had the tools to sell our most private data for money, would we be willing to do so? SourData answers this question by proposing a product/service system consisting of three devices capable of collecting data in extremely intimate areas such as masturbation, faeces and breath. All crowned by an ironic and irreverent brand identity characterised by pop imagery. The aim is to reflect on the disposal of personal data in the contemporary world.</div>
-      <div class="paragraph-2">This project was shown during the Design Week in the DesignXDesigner exhibition<br><span class="text-span-5">2022 Bachelor thesis project</span><br></div>
+      <div class="text-block h1">The sense of presence of&nbsp;indie&nbsp;magazines</div>
+      <div class="paragraph-2">What role does the materiality of paper play in a context where digital communication is predominant? This question is rooted in a long-standing philosophical debate. Drawing on <a style="color: white;" href="https://www.google.com/search?q=production+of+presence+what+meaning+cannot+convey&sca_esv=1cf06cdd23137a81&sxsrf=AE3TifOuCB9VhX9p_pUCxpIzeClwyntPAQ:1767177550467&ei=Tv1UacOeHJKI9u8Px5nZkQQ&gs_ssp=eJzj4tVP1zc0zDMvzEjOsMgzYPQyLCjKTylNLsnMz1PIT1MoKEotTs1LTlUoz0gsUchNTczLzEtXSE7My8svUUjOzytLrQQA9PMXtQ&oq=production+of+presence+what+me&gs_lp=Egxnd3Mtd2l6LXNlcnAiHnByb2R1Y3Rpb24gb2YgcHJlc2VuY2Ugd2hhdCBtZSoCCAAyCBAuGIAEGMsBMgYQABgWGB4yBhAAGBYYHjIGEAAYFhgeMgUQABjvBTIFEAAY7wUyBRAAGO8FMgUQABjvBUi5ElC-AVjgCXABeAGQAQCYAagBoAHPBqoBAzUuM7gBA8gBAPgBAZgCCaAC-QbCAgoQABhHGNYEGLADmAMAiAYBkAYEkgcDNi4zoAeJRbIHAzUuM7gH9wbCBwUwLjIuN8gHHoAIAQ&sclient=gws-wiz-serp"><u>Gumbrecht’s (2004)</u></a> concept of “presence,” the term is introduced as the tangible dimension of the world that contributes to the production of meaning. <br> Independent publishing magazines choose print and, through material, tactile, and graphic experimentation, shape this sense of presence. Designing with materiality in mind means both allowing the magazine to express itself through its physical components and defining content in harmony with the material medium that hosts it, ultimately creating a holistic experience for the reader.</div>
+      <div class="paragraph-2">
+        <a href="https://www.politesi.polimi.it/handle/10589/236149" target="_blank" class="link-3">politesi.polimi.it</a><br><span class="text-span-4">2025 Communication design master thesis</span><br>
+      </div>
     </div>
-    <div class="div-block-9"><img src="images/file-cover---2.jpg" loading="lazy" width="Auto" sizes="(max-width: 1920px) 100vw, 1920px" alt="" srcset="images/file-cover---2-p-500.jpg 500w, images/file-cover---2-p-800.jpg 800w, images/file-cover---2-p-1080.jpg 1080w, images/file-cover---2-p-1600.jpg 1600w, images/file-cover---2.jpg 1920w" class="image-8">
-      <div class="image-8 w-embed w-iframe">
-        <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; height: auto;">
-          <iframe title="vimeo-player" src="https://player.vimeo.com/video/728652693?h=21bc2d895f&title=0&byline=0&portrait=0&autoplay=1&muted=1&loop=1&controls=1&dnt=1" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" frameborder="0" allowfullscreen=""></iframe>
-        </div>
-      </div><img src="images/1Zig-Zag-Trifold-Brochure-Mockup.jpg" loading="lazy" sizes="(max-width: 2442px) 100vw, 2442px" srcset="images/1Zig-Zag-Trifold-Brochure-Mockup-p-500.jpg 500w, images/1Zig-Zag-Trifold-Brochure-Mockup-p-800.jpg 800w, images/1Zig-Zag-Trifold-Brochure-Mockup-p-1080.jpg 1080w, images/1Zig-Zag-Trifold-Brochure-Mockup-p-1600.jpg 1600w, images/1Zig-Zag-Trifold-Brochure-Mockup-p-2000.jpg 2000w, images/1Zig-Zag-Trifold-Brochure-Mockup.jpg 2442w" alt="" class="image-8"><img src="images/09.jpg" loading="lazy" width="1500" sizes="100vw" alt="" srcset="images/09-p-500.jpg 500w, images/09-p-800.jpg 800w, images/09-p-1080.jpg 1080w, images/09-p-1600.jpg 1600w, images/09-p-2000.jpg 2000w, images/09-p-2600.jpg 2600w, images/09-p-3200.jpg 3200w, images/09.jpg 4854w" class="image-8"><img src="images/07.jpg" loading="lazy" sizes="(max-width: 1618px) 100vw, 1618px" srcset="images/07-p-500.jpg 500w, images/07-p-800.jpg 800w, images/07-p-1080.jpg 1080w, images/07-p-1600.jpg 1600w, images/07.jpg 1618w" alt="" class="image-8"><img src="images/DSCF4876.jpg" loading="lazy" sizes="(max-width: 2160px) 100vw, 2160px" srcset="images/DSCF4876-p-500.jpg 500w, images/DSCF4876-p-800.jpg 800w, images/DSCF4876-p-1080.jpg 1080w, images/DSCF4876-p-1600.jpg 1600w, images/DSCF4876-p-2000.jpg 2000w, images/DSCF4876.jpg 2160w" alt="" class="image-8"><img src="images/DSCF4883.jpg" loading="lazy" width="1500" sizes="100vw" alt="" srcset="images/DSCF4883-p-500.jpg 500w, images/DSCF4883-p-800.jpg 800w, images/DSCF4883-p-1080.jpg 1080w, images/DSCF4883-p-1600.jpg 1600w, images/DSCF4883-p-2000.jpg 2000w, images/DSCF4883.jpg 2160w" class="image-8"><img src="images/DSCF4969.jpg" loading="lazy" width="1500" sizes="100vw" alt="" srcset="images/DSCF4969-p-500.jpg 500w, images/DSCF4969-p-800.jpg 800w, images/DSCF4969-p-1080.jpg 1080w, images/DSCF4969-p-1600.jpg 1600w, images/DSCF4969-p-2000.jpg 2000w, images/DSCF4969.jpg 2160w" class="image-8">
+    <div class="div-block-9"><img src="images/IMG_4677.jpeg" loading="lazy" width="Auto" sizes="(max-width: 1280px) 100vw, 1280px" alt="The accordion page inside the sense of presence thesis" class="image-8">
+      <img src="images/IMG_4670.jpg" loading="lazy" width="1500" sizes="100vw" alt="Side view of the the sense of presence thesis" class="image-8">
+      <img src="images/Tesi_Gif.gif" loading="lazy" width="1500" sizes="100vw" alt="Gif of the sense of presence thesis inner pages" class="image-8">
+      <img src="images/IMG_7210.jpeg" loading="lazy" width="1500" sizes="100vw" alt="The sense of presence. Chapter 2"  class="image-8">
+      <img src="images/IMG_7228.jpg" loading="lazy" width="1500" sizes="100vw" alt="Macro shot, inner page. The sense of presence."  class="image-8">
+      <img src="images/IMG_7213.jpeg" loading="lazy" width="1500" sizes="100vw" alt="Fukt magazine. The sense of presence thesis" class="image-8">
+      <img src="images/IMG_7227.jpg" loading="lazy" width="1500" sizes="100vw" alt="The sense of presence. Chapter 3"  class="image-8">
+      <img src="images/IMG_7214.jpeg" loading="lazy" width="1500" sizes="100vw" alt="Meantime magazine. The sense of presence thesis" class="image-8">
+      <img src="images/IMG_7231.jpg" loading="lazy" width="1500" sizes="100vw" alt="Macro shot, inner page. The sense of presence."  class="image-8">
     </div>
   </section>
   <section class="section-2">
@@ -49,7 +54,7 @@
       <div data-w-id="2da81c3a-a076-b90d-9314-47ec50cff805" class="text-block-2">Work Index</div>
     </div>
     <div class="div-block men">
-      <a data-w-id="6833d7a2-7ead-75fe-953d-f13dc36e8daa" href="milano-university-district.html" class="menulink w-inline-block">
+      <a data-w-id="6833d7a2-7ead-75fe-953d-f13dc36e8daa" href="milano-university-district.html" aria-current="page" class="menulink w-inline-block w--current">
         <div class="div-block-5">
           <div class="text-block evideziato">Milano Uni District</div>
           <div class="div-block-4"><img src="images/logo-mu.d.jpg" loading="lazy" sizes="(max-width: 1059px) 100vw, 1059px" srcset="images/logo-mu.d-p-500.jpg 500w, images/logo-mu.d-p-800.jpg 800w, images/logo-mu.d.jpg 1059w" alt="" class="image-7"></div>
@@ -105,7 +110,7 @@
           <div class="text-block evideziato"><sup class="superscript">Web design</sup>/</div>
         </div>
       </a>
-      <a data-w-id="e7af407a-4ad7-d07a-7e6f-01ccdccb8677" href="sourdata.html" aria-current="page" class="menulink w-inline-block w--current">
+      <a data-w-id="e7af407a-4ad7-d07a-7e6f-01ccdccb8677" href="sourdata.html" class="menulink w-inline-block">
         <div class="div-block-5">
           <div class="text-block evideziato">SourData</div>
           <div class="div-block-4"><img src="images/SourData.jpg" loading="lazy" width="640" sizes="(max-width: 767px) 100vw, 640px" alt="" srcset="images/SourData-p-500.jpg 500w, images/SourData.jpg 708w" class="image-4"></div>
