--- a/ProductionOfPresence.html
+++ b/ProductionOfPresence.html
@@ -2,11 +2,11 @@
 <html data-wf-page="67f40ca95b308ce6542ff05f" data-wf-site="664b888832e5abdeceae9a72">
 <head>
   <meta charset="utf-8">
-  <title>The sense of presence</title>
+  <title>The meaning of presence in indie magazines</title>
   <meta content="Master thesis on the materiality of indie magazines" name="description">
-  <meta content="The sense of presence of indie magazines" property="og:title">
+  <meta content="The meaning of presence in indie magazines" property="og:title">
   <meta content="Master thesis on the materiality of indie magazines" property="og:description">
-  <meta content="The sense of presence of indie magazines" property="twitter:title">
+  <meta content="The meaning of presence in indie magazines" property="twitter:title">
   <meta content="Master thesis on the materiality of indie magazines" property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -32,7 +32,7 @@
 <body class="body-2">
   <section class="section-3">
     <div class="div-block-8">
-      <div class="text-block h1">The sense of presence of&nbsp;indie&nbsp;magazines</div>
+      <div class="text-block h1">The meaning of presence in&nbsp;indie&nbsp;magazines</div>
       <div class="paragraph-2">What role does the materiality of paper play in a context where digital communication is predominant? This question is rooted in a long-standing philosophical debate. Drawing on <a style="color: white;" href="https://www.google.com/search?q=production+of+presence+what+meaning+cannot+convey&sca_esv=1cf06cdd23137a81&sxsrf=AE3TifOuCB9VhX9p_pUCxpIzeClwyntPAQ:1767177550467&ei=Tv1UacOeHJKI9u8Px5nZkQQ&gs_ssp=eJzj4tVP1zc0zDMvzEjOsMgzYPQyLCjKTylNLsnMz1PIT1MoKEotTs1LTlUoz0gsUchNTczLzEtXSE7My8svUUjOzytLrQQA9PMXtQ&oq=production+of+presence+what+me&gs_lp=Egxnd3Mtd2l6LXNlcnAiHnByb2R1Y3Rpb24gb2YgcHJlc2VuY2Ugd2hhdCBtZSoCCAAyCBAuGIAEGMsBMgYQABgWGB4yBhAAGBYYHjIGEAAYFhgeMgUQABjvBTIFEAAY7wUyBRAAGO8FMgUQABjvBUi5ElC-AVjgCXABeAGQAQCYAagBoAHPBqoBAzUuM7gBA8gBAPgBAZgCCaAC-QbCAgoQABhHGNYEGLADmAMAiAYBkAYEkgcDNi4zoAeJRbIHAzUuM7gH9wbCBwUwLjIuN8gHHoAIAQ&sclient=gws-wiz-serp"><u>Gumbrecht’s (2004)</u></a> concept of “presence,” the term is introduced as the tangible dimension of the world that contributes to the production of meaning. <br> Independent publishing magazines choose print and, through material, tactile, and graphic experimentation, shape this sense of presence. Designing with materiality in mind means both allowing the magazine to express itself through its physical components and defining content in harmony with the material medium that hosts it, ultimately creating a holistic experience for the reader.</div>
       <div class="paragraph-2">
         <a href="https://www.politesi.polimi.it/handle/10589/236149" target="_blank" class="link-3">politesi.polimi.it</a><br><span class="text-span-4">2025 Communication design master thesis</span><br>
@@ -63,7 +63,7 @@
       </a>
       <a data-w-id="6833d7a2-7ead-75fe-953d-f13dc36e8daa" href="ProductionOfPresence.html" class="menulink w-inline-block">
         <div class="div-block-5">
-          <div class="text-block evideziato">The sense of presence</div>
+          <div class="text-block evideziato">The meaning of presence</div>
           <div class="div-block-4"><img src="images/IMG_4681.jpeg" loading="lazy" sizes="(max-width: 1059px) 100vw, 1059px"  alt="" class="image-4"></div>
           <div class="text-block evideziato"><sup class="superscript">Master thesis</sup>/</div>
         </div>
