--- a/bensai.html
+++ b/bensai.html
@@ -56,7 +56,7 @@
       </a>
       <a data-w-id="6833d7a2-7ead-75fe-953d-f13dc36e8daa" href="ProductionOfPresence.html" class="menulink w-inline-block">
         <div class="div-block-5">
-          <div class="text-block evideziato">The sense of presence</div>
+          <div class="text-block evideziato">The meaning of presence</div>
           <div class="div-block-4"><img src="images/IMG_4681.jpeg" loading="lazy" sizes="(max-width: 1059px) 100vw, 1059px"  alt="" class="image-4"></div>
           <div class="text-block evideziato"><sup class="superscript">Master thesis</sup>/</div>
         </div>
