--- a/milano-university-district.html
+++ b/milano-university-district.html
@@ -18,6 +18,7 @@
   <link href="css/edoardo-ceriani.webflow.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
+  <script src="components/navbar.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Instrument Serif:regular,italic:latin,latin-ext","Noto Sans:200,regular,700,200italic,italic,700italic:latin,latin-ext","Instrument Serif:regular,italic:latin,latin-ext","Instrument Sans:regular,500,600,700,italic,500italic,600italic,700italic:latin,latin-ext","IBM Plex Sans Condensed:300,300italic,regular,italic,500,500italic,600,600italic:latin,latin-ext"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
@@ -40,139 +41,8 @@
     </div>
     <div class="div-block-9"><img src="images/Mud1---dimensioni-grandi.jpeg" loading="lazy" width="Auto" sizes="(max-width: 1280px) 100vw, 1280px" alt="A printed info point poster. Mud, event Milano University District" srcset="images/Mud1---dimensioni-grandi-p-500.jpeg 500w, images/Mud1---dimensioni-grandi-p-800.jpeg 800w, images/Mud1---dimensioni-grandi-p-1080.jpeg 1080w, images/Mud1---dimensioni-grandi.jpeg 1280w" class="image-8"><img src="images/Mud2---dimensioni-grandi.jpeg" loading="lazy" width="1500" sizes="100vw" alt="Stickers and paper work of the event Mud, Milano University District" srcset="images/Mud2---dimensioni-grandi-p-500.jpeg 500w, images/Mud2---dimensioni-grandi-p-800.jpeg 800w, images/Mud2---dimensioni-grandi-p-1080.jpeg 1080w, images/Mud2---dimensioni-grandi.jpeg 1280w" class="image-8"><img src="images/Mud3---dimensioni-grandi.jpeg" loading="lazy" width="1500" sizes="100vw" alt="Info point event area Mud, Milano University District" srcset="images/Mud3---dimensioni-grandi-p-500.jpeg 500w, images/Mud3---dimensioni-grandi-p-800.jpeg 800w, images/Mud3---dimensioni-grandi-p-1080.jpeg 1080w, images/Mud3---dimensioni-grandi.jpeg 1280w" class="image-8"><img src="images/Mud4---dimensioni-grandi.jpeg" loading="lazy" width="1500" sizes="100vw" alt="Draw your u. Event Mud, Milano University District" srcset="images/Mud4---dimensioni-grandi-p-500.jpeg 500w, images/Mud4---dimensioni-grandi-p-800.jpeg 800w, images/Mud4---dimensioni-grandi-p-1080.jpeg 1080w, images/Mud4---dimensioni-grandi.jpeg 1280w" class="image-8"><img src="images/Mud5---dimensioni-grandi.jpeg" loading="lazy" width="1500" sizes="100vw" alt="The sport branding identity of the Mud, Milano University District" srcset="images/Mud5---dimensioni-grandi-p-500.jpeg 500w, images/Mud5---dimensioni-grandi-p-800.jpeg 800w, images/Mud5---dimensioni-grandi-p-1080.jpeg 1080w, images/Mud5---dimensioni-grandi.jpeg 1280w" class="image-8"><img src="images/Mud55---dimensioni-grandi.jpeg" loading="lazy" width="1500" sizes="100vw" alt="The t-shirts of the event, Milano University District" srcset="images/Mud55---dimensioni-grandi-p-500.jpeg 500w, images/Mud55---dimensioni-grandi-p-800.jpeg 800w, images/Mud55---dimensioni-grandi-p-1080.jpeg 1080w, images/Mud55---dimensioni-grandi.jpeg 1280w" class="image-8"><img src="images/Mud6---dimensioni-grandi.jpeg" loading="lazy" width="1500" sizes="100vw" alt="Photo pf the stage during the day of the Mud, Milano University District" srcset="images/Mud6---dimensioni-grandi-p-500.jpeg 500w, images/Mud6---dimensioni-grandi-p-800.jpeg 800w, images/Mud6---dimensioni-grandi-p-1080.jpeg 1080w, images/Mud6---dimensioni-grandi.jpeg 1280w" class="image-8"><img src="images/Mud7---dimensioni-grandi.jpeg" loading="lazy" width="1500" sizes="100vw" alt="Photo pf the stage the last party night of the Mud, Milano University District" srcset="images/Mud7---dimensioni-grandi-p-500.jpeg 500w, images/Mud7---dimensioni-grandi-p-800.jpeg 800w, images/Mud7---dimensioni-grandi-p-1080.jpeg 1080w, images/Mud7---dimensioni-grandi.jpeg 1280w" class="image-8"><img src="images/Mud8---dimensioni-grandi.jpeg" loading="lazy" width="1500" sizes="100vw" alt="A printed t-shirt of the last edition of Mud, Milano University District" srcset="images/Mud8---dimensioni-grandi-p-500.jpeg 500w, images/Mud8---dimensioni-grandi-p-800.jpeg 800w, images/Mud8---dimensioni-grandi-p-1080.jpeg 1080w, images/Mud8---dimensioni-grandi.jpeg 1280w" class="image-8"></div>
   </section>
-  <section class="section-2">
-    <div class="div-block-16">
-      <div data-w-id="2da81c3a-a076-b90d-9314-47ec50cff805" class="text-block-2">Work Index</div>
-    </div>
-    <div class="div-block men">
-      <a data-w-id="6833d7a2-7ead-75fe-953d-f13dc36e8daa" href="milano-university-district.html" aria-current="page" class="menulink w-inline-block w--current">
-        <div class="div-block-5">
-          <div class="text-block evideziato">Milano Uni District</div>
-          <div class="div-block-4"><img src="images/logo-mu.d.jpg" loading="lazy" sizes="(max-width: 1059px) 100vw, 1059px" srcset="images/logo-mu.d-p-500.jpg 500w, images/logo-mu.d-p-800.jpg 800w, images/logo-mu.d.jpg 1059w" alt="" class="image-7"></div>
-          <div class="text-block evideziato"><sup class="superscript">Brand identity</sup>/</div>
-        </div>
-      </a>
-      <a data-w-id="6833d7a2-7ead-75fe-953d-f13dc36e8daa" href="ProductionOfPresence.html" class="menulink w-inline-block">
-        <div class="div-block-5">
-          <div class="text-block evideziato">The meaning of presence</div>
-          <div class="div-block-4"><img src="images/IMG_4681.jpeg" loading="lazy" sizes="(max-width: 1059px) 100vw, 1059px"  alt="" class="image-4"></div>
-          <div class="text-block evideziato"><sup class="superscript">Master thesis</sup>/</div>
-        </div>
-      </a>
-      <a data-w-id="c9dfc590-dcf8-5c4c-b94a-46b067157e84" href="campo-dei-fiori-gin.html" class="menulink w-inline-block">
-        <div class="div-block-5">
-          <div class="text-block evideziato">Campo dei Fiori</div>
-          <div class="div-block-4"><img src="images/_ND84218.jpg" loading="lazy" width="Auto" alt="" class="image-7"></div>
-          <div class="text-block evideziato"><sup class="superscript">Brand identiy</sup>/</div>
-        </div>
-      </a>
-      <a data-w-id="0000c909-eff3-074f-1f20-824bbeb6f4e3" href="sample-magazine.html" class="menulink w-inline-block">
-        <div class="div-block-5 menulink">
-          <div class="text-block evideziato">Sample</div>
-          <div class="div-block-4"><img src="images/Sample-c.jpeg" loading="lazy" width="640" sizes="(max-width: 767px) 100vw, 640px" alt="" srcset="images/Sample-c-p-500.jpeg 500w, images/Sample-c-p-800.jpeg 800w, images/Sample-c-p-1080.jpeg 1080w, images/Sample-c.jpeg 1280w" class="image-4"></div>
-          <div class="text-block evideziato"><sup class="superscript">Editorial</sup>/</div>
-        </div>
-      </a>
-      <a data-w-id="556f2928-6475-9851-211b-54b55a84b858" href="immotamanet.html" class="menulink w-inline-block">
-        <div class="div-block-5">
-          <div class="text-block evideziato">Immota Manet</div>
-          <div class="div-block-4"><img src="images/GiuseppeCarotenuto-LAquila_3---dimensioni-grandi.jpeg" loading="lazy" width="640" sizes="(max-width: 767px) 100vw, 640px" alt="" srcset="images/GiuseppeCarotenuto-LAquila_3---dimensioni-grandi-p-500.jpeg 500w, images/GiuseppeCarotenuto-LAquila_3---dimensioni-grandi-p-800.jpeg 800w, images/GiuseppeCarotenuto-LAquila_3---dimensioni-grandi-p-1080.jpeg 1080w, images/GiuseppeCarotenuto-LAquila_3---dimensioni-grandi.jpeg 1280w" class="image-5"></div>
-          <div class="text-block evideziato"><sup class="superscript">Editorial</sup>/</div>
-        </div>
-      </a>
-      <a data-w-id="6f2453f2-748a-d988-0685-6fbce508a6c3" href="refertomagazine.html" class="menulink w-inline-block">
-        <div class="div-block-5">
-          <div class="text-block evideziato">Referto Magazine</div>
-          <div class="div-block-4"><img src="images/Referto-c.jpeg" loading="lazy" width="640" sizes="(max-width: 767px) 100vw, 640px" alt="" srcset="images/Referto-c-p-500.jpeg 500w, images/Referto-c-p-800.jpeg 800w, images/Referto-c-p-1080.jpeg 1080w, images/Referto-c.jpeg 1280w" class="image-6"></div>
-          <div class="text-block evideziato"><sup class="superscript">Editorial</sup>/</div>
-        </div>
-      </a>
-      <a data-w-id="918947e8-168f-7793-869c-9f8b4bc854c6" href="https://caboschi.it" target="_blank" class="menulink w-inline-block">
-        <div class="div-block-5">
-          <div class="text-block evideziato">Ca&#x27;Boschi</div>
-          <div class="div-block-4"><img src="images/CaBoschi-.c.jpeg" loading="lazy" width="640" sizes="(max-width: 767px) 100vw, 640px" alt="" srcset="images/CaBoschi-.c-p-500.jpeg 500w, images/CaBoschi-.c-p-800.jpeg 800w, images/CaBoschi-.c-p-1080.jpeg 1080w, images/CaBoschi-.c.jpeg 1280w" class="image-6"></div>
-          <div class="text-block evideziato"><sup class="superscript">Web design</sup>/</div>
-        </div>
-      </a>
-      <a data-w-id="2e3442a9-e4a1-5fe2-8fc0-cd0e0a334685" href="it-back.html" class="menulink w-inline-block">
-        <div class="div-block-5">
-          <div class="text-block evideziato">It-Back</div>
-          <div class="div-block-4"><img src="images/It-Back.jpg" loading="lazy" width="640" sizes="(max-width: 767px) 100vw, 640px" alt="" srcset="images/It-Back-p-500.jpg 500w, images/It-Back-p-800.jpg 800w, images/It-Back-p-1080.jpg 1080w, images/It-Back-p-1600.jpg 1600w, images/It-Back.jpg 1972w" class="image-5"></div>
-          <div class="text-block evideziato"><sup class="superscript">Web design</sup>/</div>
-        </div>
-      </a>
-      <a data-w-id="e7af407a-4ad7-d07a-7e6f-01ccdccb8677" href="sourdata.html" class="menulink w-inline-block">
-        <div class="div-block-5">
-          <div class="text-block evideziato">SourData</div>
-          <div class="div-block-4"><img src="images/SourData.jpg" loading="lazy" width="640" sizes="(max-width: 767px) 100vw, 640px" alt="" srcset="images/SourData-p-500.jpg 500w, images/SourData.jpg 708w" class="image-4"></div>
-          <div class="text-block evideziato"><sup class="superscript">Brand identity</sup>/</div>
-        </div>
-      </a>
-      <a data-w-id="9e11aaed-ad97-83a0-2343-ca812489fbec" href="bensai.html" class="menulink w-inline-block">
-        <div class="div-block-5">
-          <div class="text-block evideziato">BenSai</div>
-          <div class="div-block-4"><img src="images/mini.jpg" loading="lazy" width="640" sizes="(max-width: 767px) 100vw, 640px" alt="" srcset="images/mini-p-500.jpg 500w, images/mini.jpg 540w" class="image-7"></div>
-          <div class="text-block evideziato"><sup class="superscript">Interaction</sup>/</div>
-        </div>
-      </a>
-    </div>
-    <div class="div-block-15"><img src="images/WhatsApp-IMG-0731---dimensioni-grandi.jpeg" loading="lazy" sizes="(max-width: 1280px) 100vw, 1280px" srcset="images/WhatsApp-IMG-0731---dimensioni-grandi-p-500.jpeg 500w, images/WhatsApp-IMG-0731---dimensioni-grandi-p-800.jpeg 800w, images/WhatsApp-IMG-0731---dimensioni-grandi-p-1080.jpeg 1080w, images/WhatsApp-IMG-0731---dimensioni-grandi.jpeg 1280w" alt="" class="image-11"></div>
-     <div class="div-block-7">
-      <div class="div-block-10">
-        <div><img src="images/Edoardo.svg" loading="lazy" width="150" height="Auto" alt="" class="image-9">
-          <div class="paragraph-2 nero"><span class="evidenziato1">eddy.ceriani@gmail.com</span></div>
-          <div class="paragraph-2 nero"><span class="evidenziato1">Now based in Milano.</span></div>
-          <div class="paragraph-2 nero padding"><span class="evidenziato1">Visual and communication designer</span></div>
-          <div class="paragraph-2 nero italic"><span class="evidenziato1">Work expreriences</span></div>
-          <div class="paragraph-2 nero padding"><span class="evidenziato1">2025-ongoing: Communication designer, Habits srl. Prodcut design studio <br> February 2025: Workshop teaching assistant in editorial design. Politecnico di Milano.<br>2024-2025: Fanzine art direction. VerySeri Lab<br>2023-25: Designer freelance.<br>Milano University District brand identity.<br>Ca’Boschi winery website art direction.<br>Campo dei Fiori Gin brand identity and bottle label.</span></div>
-          <div class="paragraph-2 nero italic"><span class="evidenziato1">Exhibition</span></div>
-          <div class="paragraph-2 nero padding"><span class="evidenziato1">2023: Belonging/Not belonging  Indie magazine for social change<br>Referto Magazine,  La Stecca 3 (Milano).<br>2022: DesignXDesigner, Politecnico Design Student Exibition,<br>SourData (bachelor thesis project), Milano Design Week Fuorisalone.</span></div>
-          <div class="paragraph-2 nero italic"><span class="evidenziato1">Education</span></div>
-          <div class="paragraph-2 nero padding"><span class="evidenziato1">2019-2025: Master degree (110/110) and Bachelor degree (110/110) in Comunication Design at Politecnico di Milano. <br>2024: Erasmus experience, Politecnico di Leiria, Portugal.<br>2019: Scientific high school degree at Liceo Scientifico “G.B. Grassi”.</span></div>
-        </div>
-        <div class="paragraph-2 nero fine-colonna"><span class="evidenziato1">Last website update: December 2025</span></div>
-      </div>
-      <div class="div-block-11">
-        <div>
-          <div class="paragraph-2 nero padding"><span class="evidenziato1">Multidisciplinary designer with a focus on visual storytelling. I am looking for a stimulating environment where I can contribute to meaningful projects while learning from mentors.</span></div>
-          <div class="paragraph-2 nero italic"><span class="evidenziato1">Languages</span></div>
-          <div class="paragraph-2 nero padding"><span class="evidenziato1">Italian mothertongue<br>English fluent (TOEIC level C1)<br>Portuguese advanced</span></div>
-          <div class="paragraph-2 nero italic"><span class="evidenziato1">Skils</span></div>
-          <div class="paragraph-2 nero padding"><span class="evidenziato1">Ai tools: Weavy AI, Higgsfield , Nano Banana Pro, Kling o1...<br>Software: Indesign, Illustrator, Figma, Excel, PowerPoint, AfterEffects, Rive.app... <br>Website: VisualStudio ( Html, Css), Elementor Pro, Webflow <br>3D: Blender ( Modelling SubD, Cycles rendering...)</span></div>
-          <div class="paragraph-2 nero italic"><span class="evidenziato1">Passions</span></div>
-          <div class="paragraph-2 nero padding"><span class="evidenziato1">DIY / Woodwoork <br>Rock climbing <br>Hand printing techniques <br>Playing music</span></div>
-          <div class="paragraph-2 nero italic"><span class="evidenziato1">Skills</span></div>
-          <div class="paragraph-2 nero padding"><span class="evidenziato1">Team collaboration, Project coordination, Openness to feedback, Continuous learning mindset</span></div>
-        </div>
-      </div>
-    </div>
-    <div class="div-block-6">
-      <div data-w-id="c6bf2b94-fe5f-7df5-f8f9-f4ad3f9c7516" class="text-block-2">Personal info</div>
-      <div data-w-id="c6bf2b94-fe5f-7df5-f8f9-f4ad3f9c7514" class="text-block-2">
-        <a href="index.html">Homepage</a>
-        <link rel="prefetch" href="/">
-      </div>
-    </div>
-  </section>
+  <my-navbar></my-navbar>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=664b888832e5abdeceae9a72" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
-  <script>
-    document.addEventListener("DOMContentLoaded", function() {
-        // Ottieni l'URL corrente senza il parametro di query e l'ancora
-        var currentUrl = window.location.pathname;
-        // Seleziona tutti i link block con la classe .menulink
-        var menuLinks = document.querySelectorAll('.menulink a');
-        // Itera su ciascun link
-        menuLinks.forEach(function(link) {
-            // Ottieni l'URL del link
-            var linkUrl = link.getAttribute('href');
-            // Confronta l'URL del link con l'URL corrente
-            if (linkUrl === currentUrl) {
-                // Aggiungi la classe active al genitore (link block)
-                link.parentElement.classList.add('active');
-            }
-        });
-    });
-</script>
 </body>
 </html>
