--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
   <script src="components/navbar.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript" defer></script>
-  <script type="text/javascript" defer>WebFont.load({  google: {    families: ["Instrument Serif:regular,italic:latin,latin-ext","Noto Sans:200,regular,700,200italic,italic,700italic:latin,latin-ext","Instrument Serif:regular,italic:latin,latin-ext","Instrument Sans:regular,500,600,700,italic,500italic,600italic,700italic:latin,latin-ext","IBM Plex Sans Condensed:300,300italic,regular,italic,500,500italic,600,600italic:latin,latin-ext"]  }});</script>
-  <script type="text/javascript" defer>!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Instrument Serif:regular,italic:latin,latin-ext","Noto Sans:200,regular,700,200italic,italic,700italic:latin,latin-ext","Instrument Serif:regular,italic:latin,latin-ext","Instrument Sans:regular,500,600,700,italic,500italic,600italic,700italic:latin,latin-ext","IBM Plex Sans Condensed:300,300italic,regular,italic,500,500italic,600,600italic:latin,latin-ext"]  }});</script>
+  <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <style>
@@ -36,18 +36,18 @@
   <my-navbar></my-navbar>
   <div data-delay="3000" data-animation="fade" class="slider w-slider" data-autoplay="true" data-easing="linear" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="0" data-duration="0" data-infinite="true">
     <div class="w-slider-mask">
-      <div class="slide-2 w-slide"></div>
-      <div class="slide-11 w-slide"></div>
-      <div class="slide-1 w-slide"></div>
-      <div class="slide-4 w-slide"></div>
-      <div class="slide-3 w-slide"></div>
-      <div class="slide-10 w-slide"></div>
-      <div class="slide w-slide"></div>
-      <div class="slide-8 w-slide"></div>
-      <div class="slide-5 w-slide"></div>
-      <div class="slide-9 w-slide"></div>
-      <div class="slide-6 w-slide"></div>
-      <div class="slide-7 w-slide"></div>
+      <div class="slide-2 w-slide"></div> //MUD
+      <div class="slide-1 w-slide"></div> //campo-dei-fiori-gin
+      <div class="slide-5 w-slide"></div>//winery
+      <div class="slide-3 w-slide"></div>//immota
+      <div class="slide w-slide"></div>//referto
+      <div class="slide-9 w-slide"></div>//bella scusa
+      <div class="slide-6 w-slide"></div>//it-back
+      <div class="slide-4 w-slide"></div>//sample
+      <div class="slide-11 w-slide"></div> //tesi
+      <div class="slide-10 w-slide"></div>//bensai
+      <div class="slide-7 w-slide"></div>//sourdata
+      <div class="slide-8 w-slide"></div>//vegetarian guide
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=664b888832e5abdeceae9a72" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
